syntax = "proto3";

package recording;
import "google/api/annotations.proto";
option php_namespace="KobaltMusic\\Recording";


message Author {
  string name = 1;
}

message Recording {
  Author author = 1;
  string name = 2;
}

message AddRecordingRequest {
  Recording recording = 1;
}
message AddRecordingResponse {}

message ListRecordingsRequest {}

message ListRecordingsResponse {
  repeated Recording recordings = 1;
}

service RecordingService {
  rpc AddRecording(AddRecordingRequest) returns (AddRecordingResponse) {
    option (google.api.http) = {
      post: "/v1/recordings"
      body: "*"
    };
  }
  rpc ListRecordings(ListRecordingsRequest) returns (ListRecordingsResponse) {
    option (google.api.http) = {
      get: "/v1/recordings"
    };
  }
  rpc ListRecordingsStream(ListRecordingsRequest) returns (stream Recording) {}
}
